Fix "text-align: center" on chemical elements.

--- a/styles/badify.less
+++ b/styles/badify.less
@@ -119,3 +119,7 @@
   color: #72b320;
   font-weight: bold;
 }
+
+.chemical-element {
+  text-align: center;
+}
